deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: app
  labels:
    argocd.argoproj.io/instance: nextjs
    role: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: ghcr.io/traipoap/nextjs:latest
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      automountServiceAccountToken: false
      imagePullSecrets:
      - name: github-registry
      serviceAccountName: container-registry
      restartPolicy: Always
