deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  namespace: app
spec:
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
